# paimon-pet

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
assets/sprites/paimon/: pet.json
backend/: conf.yaml  start.py
docs/superpowers/plans/: 2026-05-03-paimon-pet.md
docs/superpowers/specs/: 2026-05-03-paimon-pet-design.md
scripts/: start_all.bat
src/: App.css  App.tsx  PhaserWrapper.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs
src-tauri/src/backend/: process.rs
src-tauri/src/commands/: audio_cmd.rs  backend_cmd.rs  mod.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/window/: tray.rs
src/components/: ChatBubble.tsx  ChatInput.tsx  PetWindow.tsx  StatusIndicator.tsx
src/config/: paimon.json
src/hooks/: useAudio.ts  useSettingStore.ts  useWebSocket.ts
src/renderers/: Live2DRenderer.tsx  SpriteRenderer.tsx
src/scenes/: Pets.ts
src/scenes/manager/: ConfigManager.ts  InputManager.ts  index.ts
src/services/: audioEncoder.ts  audioService.ts  websocketService.ts
src/settings/: AISettings.tsx  BackendSettings.tsx  GeneralSettings.tsx  PetSettings.tsx  SettingsPanel.tsx  VoiceSettings.tsx
src/stores/: chatStore.ts  petStore.ts  settingsStore.ts
src/types/: IEvents.ts  IPet.ts  ISpriteConfig.ts  messages.ts  pet.ts  settings.ts
tests/frontend/components/: ChatBubble.test.tsx
tests/frontend/helpers/: mockTauri.ts
(+2 files in other folders)
