[package]
name = "paimon-pet"
version = "0.1.0"
description = "PaimonPet - Desktop pet application with animated Paimon character"
authors = ["Gaaiyun"]
license = "ISC"
repository = "https://github.com/gaaiyun/paimon-pet"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "paimon_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1"
